syntax = "proto3";

package feed.v1;
option go_package = "./feedpb";

service FeedService {
  rpc Posts(PostsRequest) returns (PostsResponse);
}

message Reaction {
  string icon = 1;
  uint32 count = 2;
}

message Post {
  uint32 category = 1;
  bool isDeleted = 2;
  string identifier = 3;
  string metadata = 5;
  string parent_post_identifier = 6;
  string created_by = 7;
  int64 created_at = 8;
  repeated Reaction reactions = 9;
}

message PostFilter {
  repeated uint32 categories = 1;
  string user = 2;
  repeated string hashtags = 3;
}

message PostsRequest {
    PostFilter filter = 1;
    uint32 limit = 2;
    uint32 offset = 3;
}


message PostsResponse {
    repeated Post posts = 1;
}
